...
                repeatMode = RepeatMode.Reverse

            )
        )
    }
    Column(
        modifier = Modifier.fillMaxSize().testTag("SplashScreen"),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center
    ) {
        SplashIcon()
        Spacer(modifier = Modifier.height(16.dp)) // Add spacing between icon and button
        Text( text = "FieldWise",
...
                fontFamily = ShantellSansFontFamily,
            ))
        Spacer(modifier = Modifier.height(80.dp))
        MainButton(
            onClick = { navigateToLoading() },
            mainButtonType = MainButtonType.BLUE,
            button = "GET STARTED",
            isEnable = true
        )
        //change the format to be able to navigate
    }// Renamed for clarity button = "GET STARTED"
}

...
