...
                    modifier = Modifier
                        .size(checkAn.value.dp)
                )
                Spacer(modifier = Modifier.height(80.dp))
                Text(
                    text = "Set up is complete!",
                    modifier = modifier.testTag("CompleteScreen"),
                    color = Color(0xFF4B4B4B),
                    style = TextStyle(
                        fontSize = 30.sp,
                        fontWeight = FontWeight.Bold,
                        fontFamily = InterFontFamily
                    )
...
                        fontSize = 16.sp,
                        fontWeight = FontWeight.Medium,
                        fontFamily = InterFontFamily
                    )
                )
                Spacer(modifier = Modifier.height(100.dp))
                MainButton(modifier = modifier.testTag("ConfirmButton"),button = "I'M READY !", onClick = { NavigateToHome() }, mainButtonType = MainButtonType.BLUE, isEnable = true)

            }}

    }
}

...
